--- a/node/package.json
+++ b/node/package.json
@@ -3,10 +3,14 @@
   "description": "iOS controller and OSC output",
   "version": "0.0.1",
   "dependencies": {
+    "async": "^0.9.0",
     "colors": "^1.0.3",
-    "express": "^4.10.0",
+    "express": "^4.10.1",
     "jade": "^1.7.0",
     "node-dir": "^0.1.6",
-    "socket.io": "^1.1.0"
+    "path": "^0.4.9",
+    "slug": "^0.8.0",
+    "socket.io": "^1.1.0",
+    "underscore": "^1.7.0"
   }
 }
