implemented OSC, now sends on any new GET request

--- a/node/package.json
+++ b/node/package.json
@@ -8,6 +8,10 @@
     "express": "^4.10.1",
     "jade": "^1.7.0",
     "node-dir": "^0.1.6",
+    "osc": "^1.0.4",
+    "osc-emitter": "^1.0.0",
+    "osc-min": "^0.2.0",
+    "osc-receiver": "^1.1.0",
     "path": "^0.4.9",
     "slug": "^0.8.0",
     "socket.io": "^1.1.0",
