--- a/node/package.json
+++ b/node/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "dependencies": {
     "async": "^0.9.0",
+    "busboy": "^0.2.9",
     "colors": "^1.0.3",
     "express": "^4.10.1",
     "jade": "^1.7.0",
